--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,14 @@
 *.iml
 .gradle
 /local.properties
+/.idea/assetWizardSettings.xml
+/.idea/caches/build_file_checksums.ser
+/.idea/caches/gradle_models.ser
+/.idea/libraries
+/.idea/modules.xml
+/.idea/markdown-navigator.xml
+/.idea/workspace.xml
 .DS_Store
 /build
-.idea
 /captures
 .externalNativeBuild
