--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.allen.androidcustomview">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -11,18 +12,25 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppThemeNoTitle">
-        <activity android:name=".activity.MainActivity">
+        android:theme="@style/AppTheme.NoActionBar"
+        tools:ignore="GoogleAppIndexingWarning">
+        <activity
+            android:name=".activity.MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.BubbleViewActivity" />
+        <activity
+            android:name=".activity.BubbleViewActivity"
+            android:theme="@style/FullscreenTheme" />
         <activity android:name=".activity.WaveByBezierActivity" />
         <activity android:name=".activity.WaveBySinCosActivity" />
-        <activity android:name=".activity.RadarActivity" />
+        <activity
+            android:name=".activity.RadarActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".tagview.TagActivity" />
         <activity android:name=".activity.AnimationBtnActivity" />
         <activity android:name=".activity.ProgressBarActivity" />
